--- a/backend/InfoShop.Core/InfoShop.Core.WebApi/appsettings.json
+++ b/backend/InfoShop.Core/InfoShop.Core.WebApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "InfoShopCoreDBConnection": "Server=(localdb)\\mssqllocaldb;Database=EasySpeakCoreDB;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
