Add Market controller, service, services interface

--- a/backend/InfoShop.Core/InfoShop.Core.WebApi/appsettings.json
+++ b/backend/InfoShop.Core/InfoShop.Core.WebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "InfoShopCoreDBConnection": "Server=(localdb)\\mssqllocaldb;Database=EasySpeakCoreDB;Trusted_Connection=True;"
+    "InfoShopCoreDBConnection": "Server=(localdb)\\mssqllocaldb;Database=InfoShopCoreDB;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
