--- a/backend/InfoShop.Core/InfoShop.Core.DAL/InfoShop.Core.DAL.csproj
+++ b/backend/InfoShop.Core/InfoShop.Core.DAL/InfoShop.Core.DAL.csproj
@@ -8,6 +8,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\InfoShop.Core.Common\InfoShop.Core.Common.csproj" />
   </ItemGroup>
 
 </Project>
